# pyomo-cvp

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  ROADMAP.md  _typos.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
design/: algebraic-control-references.md
examples/: Quad_tank_cvp.ipynb  explicit_api.ipynb  explicit_api.py  hicks_cvp.ipynb  racecar_cvp.ipynb
examples/.ipynb_checkpoints/: racecar-checkpoint.py  racecar_cvp-checkpoint.ipynb
src/pyomo_cvp/: __init__.py  parameterize.py
tests/: helpers.py  test_algebraic_refs.py  test_batched.py  test_declare.py  test_parameterize.py  test_profiles.py  test_schemes.py  test_smoke.py
