[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyomo-cvp"
version = "0.4.0"
description = "Control vector parameterization for pyomo.dae: piecewise control profiles by variable elimination instead of linking constraints."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Devin Griffith", email = "dwg176@gmail.com" }]
keywords = ["pyomo", "dae", "optimal-control", "dynamic-optimization", "control-vector-parameterization", "collocation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["pyomo>=6.7"]

[project.optional-dependencies]
dev = ["pytest", "pyomo-ripopt"]

[project.urls]
Homepage = "https://github.com/devin-griff/pyomo-cvp"
Repository = "https://github.com/devin-griff/pyomo-cvp"
Issues = "https://github.com/devin-griff/pyomo-cvp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pyomo_cvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
